Rough Draft. I have the images and text loading, sorted and counted. Need to smooth out the details and work on the UI.

--- a/CodeSample/CodeSample/CodeSample.csproj
+++ b/CodeSample/CodeSample/CodeSample.csproj
@@ -110,6 +110,9 @@
       <Private>True</Private>
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="WordCloudCalculator, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\WordCloudCalculator.1.0.3\lib\net452\WordCloudCalculator.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Diagnostics.DiagnosticSource">
