--- a/CodeSample/CodeSample/packages.config
+++ b/CodeSample/CodeSample/packages.config
@@ -23,4 +23,5 @@
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
+  <package id="WordCloudCalculator" version="1.0.3" targetFramework="net472" />
 </packages>
