Added UI and drivers in UI project.

--- a/UWPCodeExample/XCentium.CodeExample.Tests/XCentium.CodeExample.Tests.csproj
+++ b/UWPCodeExample/XCentium.CodeExample.Tests/XCentium.CodeExample.Tests.csproj
@@ -16,4 +16,10 @@
     <ProjectReference Include="..\Libraries\XCentium.CodeExample.Libraries.WordCollector\XCentium.CodeExample.Libraries.WordCollector.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="ignorelist.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
