UI layout work. ALso added custom settings option and refined the RegEx that filters the text.

--- a/UWPCodeExample/XCentium.CodeExample.UI/App.config
+++ b/UWPCodeExample/XCentium.CodeExample.UI/App.config
@@ -5,5 +5,7 @@
     </startup>
   <appSettings>
     <add key="TopNumberOfWords" value="10"/>
+    <add key="RegExExcludeSymbols" value='[&amp;,.?!:;#\"\r\n\/\\]'/>
+    <add key='SearchTagNames' value='body,meta,title'/>
   </appSettings>
 </configuration>
