Fixed an issue caused by the memory stream being disposed to early.

--- a/UWPCodeExample/XCentium.CodeExample.UI/XCentium.CodeExample.UI.csproj
+++ b/UWPCodeExample/XCentium.CodeExample.UI/XCentium.CodeExample.UI.csproj
@@ -125,5 +125,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="invalidImageFormat.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
