--- a/UWPCodeExample/XCentium.CodeExample.UI/App.config
+++ b/UWPCodeExample/XCentium.CodeExample.UI/App.config
@@ -5,7 +5,7 @@
     </startup>
   <appSettings>
     <add key="TopNumberOfWords" value="10"/>
-    <add key="RegExExcludeSymbols" value='[&amp;,.?!:;#\"\r\n\/\\]'/>
+    <add key="RegExExcludeSymbols" value='[&amp;,.?!:;#\"\r\n\/\\_]'/>
     <add key='SearchTagNames' value='body,meta,title'/>
   </appSettings>
 </configuration>
