--- a/CodeExample/XCentium.CodeExample.Tests/XCentium.CodeExample.Tests.csproj
+++ b/CodeExample/XCentium.CodeExample.Tests/XCentium.CodeExample.Tests.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="Selenium.Firefox.WebDriver" Version="0.21.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
@@ -18,6 +20,9 @@
 
   <ItemGroup>
     <None Update="ignorelist.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="StaticPages\Google.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
