Fixed issue with title text. Also added more static integration tests.Added support for running local html files.

--- a/CodeExample/XCentium.CodeExample.Tests/XCentium.CodeExample.Tests.csproj
+++ b/CodeExample/XCentium.CodeExample.Tests/XCentium.CodeExample.Tests.csproj
@@ -25,6 +25,15 @@
     <None Update="StaticPages\Google.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="StaticPages\test3.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="StaticPages\test2.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="StaticPages\test1.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
