--- a/CodeExample/XCentium.CodeExample.UI/packages.config
+++ b/CodeExample/XCentium.CodeExample.UI/packages.config
@@ -5,4 +5,5 @@
   <package id="Selenium.WebDriver" version="3.14.0" targetFramework="net472" />
   <package id="Selenium.WebDriver.ChromeDriver" version="2.41.0" targetFramework="net472" />
   <package id="Selenium.WebDriver.IEDriver" version="3.14.0" targetFramework="net472" />
+  <package id="Svg" version="2.3.0" targetFramework="net472" />
 </packages>
